fix an issue with reply menu being covered by background

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -306,7 +306,7 @@ body {
 	left:50%;
 	transform: translateX(-50%);
 	background-color: white;
-	z-index: 2;
+	z-index: 3;
 	border: 3px solid black;
 	box-sizing: border-box;
 }
